--- a/portfolio/public/assets/web/css_global/style.css
+++ b/portfolio/public/assets/web/css_global/style.css
@@ -5,7 +5,7 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url(fonts/pxiGyp8kv8JHgFVrJJLucXtAKPY.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiGyp8kv8JHgFVrJJLucXtAKPY.woff2') }}) format('woff2');
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB
 }
 
@@ -14,7 +14,7 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url(fonts/pxiGyp8kv8JHgFVrJJLufntAKPY.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiGyp8kv8JHgFVrJJLufntAKPY.woff2') }}) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
 }
 
@@ -23,7 +23,7 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url(fonts/pxiGyp8kv8JHgFVrJJLucHtA.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiGyp8kv8JHgFVrJJLucHtA.woff2') }}) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
 }
 
@@ -32,7 +32,7 @@
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url(fonts/pxiDyp8kv8JHgFVrJJLmr19VFteOcEg.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiDyp8kv8JHgFVrJJLmr19VFteOcEg.woff2') }}) format('woff2');
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB
 }
 
@@ -41,7 +41,7 @@
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url(fonts/pxiDyp8kv8JHgFVrJJLmr19VGdeOcEg.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiDyp8kv8JHgFVrJJLmr19VGdeOcEg.woff2') }}) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
 }
 
@@ -50,7 +50,7 @@
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url(fonts/pxiDyp8kv8JHgFVrJJLmr19VF9eO.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiDyp8kv8JHgFVrJJLmr19VF9eO.woff2') }}) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
 }
 
@@ -59,7 +59,7 @@
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url(fonts/pxiDyp8kv8JHgFVrJJLmy15VFteOcEg.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiDyp8kv8JHgFVrJJLmy15VFteOcEg.woff2') }}) format('woff2');
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB
 }
 
@@ -68,7 +68,7 @@
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url(fonts/pxiDyp8kv8JHgFVrJJLmy15VGdeOcEg.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiDyp8kv8JHgFVrJJLmy15VGdeOcEg.woff2') }}) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
 }
 
@@ -77,7 +77,7 @@
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url(fonts/pxiDyp8kv8JHgFVrJJLmy15VF9eO.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiDyp8kv8JHgFVrJJLmy15VF9eO.woff2') }}) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
 }
 
@@ -86,7 +86,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(fonts/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiEyp8kv8JHgFVrJJbecmNE.woff2') }}) format('woff2');
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB
 }
 
@@ -95,7 +95,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(fonts/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiEyp8kv8JHgFVrJJnecmNE.woff2') }}) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
 }
 
@@ -104,7 +104,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(fonts/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiEyp8kv8JHgFVrJJfecg.woff2') }}) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
 }
 
@@ -113,7 +113,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url(fonts/pxiByp8kv8JHgFVrLEj6Z11lFc-K.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiByp8kv8JHgFVrLEj6Z11lFc-K.woff2') }}) format('woff2');
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB
 }
 
@@ -122,7 +122,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url(fonts/pxiByp8kv8JHgFVrLEj6Z1JlFc-K.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiByp8kv8JHgFVrLEj6Z1JlFc-K.woff2') }}) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
 }
 
@@ -131,7 +131,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url(fonts/pxiByp8kv8JHgFVrLEj6Z1xlFQ.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiByp8kv8JHgFVrLEj6Z1xlFQ.woff2') }}) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
 }
 
@@ -140,7 +140,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(fonts/pxiByp8kv8JHgFVrLCz7Z11lFc-K.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiByp8kv8JHgFVrLCz7Z11lFc-K.woff2') }}) format('woff2');
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB
 }
 
@@ -149,7 +149,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(fonts/pxiByp8kv8JHgFVrLCz7Z1JlFc-K.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiByp8kv8JHgFVrLCz7Z1JlFc-K.woff2') }}) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
 }
 
@@ -158,7 +158,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(fonts/pxiByp8kv8JHgFVrLCz7Z1xlFQ.woff2) format('woff2');
+  src: url({{ asset('assets/web/fonts/pxiByp8kv8JHgFVrLCz7Z1xlFQ.woff2') }}) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
 }
 
@@ -169,8 +169,8 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url(fonts/fa-brands-400.eot);
-  src: url(fonts/fa-brands-400.eot#iefix) format("embedded-opentype"), url(fonts/fa-brands-400.woff2) format("woff2"), url(fonts/fa-brands-400.woff) format("woff"), url(fonts/fa-brands-400.ttf) format("truetype"), url(images/fa-brands-400.svg#fontawesome) format("svg")
+  src: url({{ asset('assets/web/fonts/fa-brands-400.eot);
+  src: url({{ asset('assets/web/fonts/fa-brands-400.eot#iefix) format("embedded-opentype"), url({{ asset('assets/web/fonts/fa-brands-400.woff2') }}) format("woff2"), url({{ asset('assets/web/fonts/fa-brands-400.woff) format("woff"), url({{ asset('assets/web/fonts/fa-brands-400.ttf) format("truetype"), url(images/fa-brands-400.svg#fontawesome) format("svg")
 }
 
 .fab {
@@ -184,8 +184,8 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url(fonts/fa-regular-400.eot);
-  src: url(fonts/fa-regular-400.eot#iefix) format("embedded-opentype"), url(fonts/fa-regular-400.woff2) format("woff2"), url(fonts/fa-regular-400.woff) format("woff"), url(fonts/fa-regular-400.ttf) format("truetype"), url(images/fa-regular-400.svg#fontawesome) format("svg")
+  src: url({{ asset('assets/web/fonts/fa-regular-400.eot);
+  src: url({{ asset('assets/web/fonts/fa-regular-400.eot#iefix) format("embedded-opentype"), url({{ asset('assets/web/fonts/fa-regular-400.woff2') }}) format("woff2"), url({{ asset('assets/web/fonts/fa-regular-400.woff) format("woff"), url({{ asset('assets/web/fonts/fa-regular-400.ttf) format("truetype"), url(images/fa-regular-400.svg#fontawesome) format("svg")
 }
 
 .far {
@@ -199,8 +199,8 @@
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src: url(fonts/fa-solid-900.eot);
-  src: url(fonts/fa-solid-900.eot#iefix) format("embedded-opentype"), url(fonts/fa-solid-900.woff2) format("woff2"), url(fonts/fa-solid-900.woff) format("woff"), url(fonts/fa-solid-900.ttf) format("truetype"), url(images/fa-solid-900.svg#fontawesome) format("svg")
+  src: url({{ asset('assets/web/fonts/fa-solid-900.eot);
+  src: url({{ asset('assets/web/fonts/fa-solid-900.eot#iefix) format("embedded-opentype"), url({{ asset('assets/web/fonts/fa-solid-900.woff2') }}) format("woff2"), url({{ asset('assets/web/fonts/fa-solid-900.woff) format("woff"), url({{ asset('assets/web/fonts/fa-solid-900.ttf) format("truetype"), url(images/fa-solid-900.svg#fontawesome) format("svg")
 }
 
 .fa,
@@ -3244,7 +3244,7 @@ span.label-news-ui {
 
 .top-buttons:before {
   content: "";
-  background-image: url(images/Piki%2Bbg%2Brotate%2Bcp.png);
+  background-image: url('{{ asset('portfolio/pu/assets/web/images/Piki.png') }}');
   position: absolute;
   left: 0;
   right: 0;
