--- a/portfolio/public/assets/web/hostit/css/style.css
+++ b/portfolio/public/assets/web/hostit/css/style.css
@@ -106,7 +106,7 @@ a:focus {
 .hero_area {
   position: relative;
   background-color: #020230;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
