--- a/portfolio/public/assets/web/hostit/css/style.scss
+++ b/portfolio/public/assets/web/hostit/css/style.scss
@@ -127,7 +127,7 @@ a:focus {
 .hero_area {
   position: relative;
   background-color: #020230;
-  min-height: 100vh;
+//   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
